<resources>
    <string name="app_name">For Mum</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="row_name">name</string>
    <string name="row_desc">row_desc</string>
    <string name="row_rate">row_rate</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="about_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a urna ipsum. Quisque ut auctor eros, ac ultricies turpis. Suspendisse eget lacus vel nunc feugiat commodo. Curabitur aliquet neque id diam lacinia iaculis. Donec vel eros hendrerit erat vestibulum blandit sed eget est. Vivamus elementum, lacus eget tristique tempus, turpis felis vehicula ligula, a mollis sem magna a ipsum. Nullam laoreet iaculis sapien, et consectetur lorem rhoncus et. Aenean dictum nulla magna, vel rutrum leo luctus quis. Mauris eget velit ut est porta dapibus.</string>
    <string name="add_to_services">Join Services</string>
    <string name="description">Description</string>
    <string name="rate">rate</string>
    <string name="desc_helper">Describe your Service/Experience</string>
    <string name="submit_feedback">submit</string>
    <string name="cancel_feedback">cancel</string>
    <string name="enter_feedback_comment">Enter feedback comment</string>
    <string name="phone_helper">Enter as : +97x xxx xxx xxx</string>
    <string name="details">Details</string>
</resources>