<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:fadingEdgeLength="@dimen/_2sdp"
    android:focusable="true"
    android:layout_margin="@dimen/_10sdp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_2sdp"
    tools:layout_editor_absoluteX="26dp"
    tools:layout_editor_absoluteY="13dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:padding="@dimen/_15sdp"
        tools:layout_editor_absoluteY="1dp">


        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_desc"
            app:layout_constraintStart_toStartOf="@+id/txtName"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:text="@string/row_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="276dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="4dp"
            android:text="@string/row_rate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDesc" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>